# tpf-t16xe

./: .gitignore  CMakeLists.txt  README.md  build.ps1
.github/workflows/: discord_notify.yml  label.yml
gui/: CMakeLists.txt  gui_main.cpp
t16xe/: CMakeLists.txt  build.ps1  kbd.asm  lib.asm  main.asm  main.toru
t16xe/src/: main.cpp  t16xe.cpp  t16xe.hpp  tasm.cpp  tasm.hpp  tools_t16xe.hpp
t16xe/src/asm/: tasm.cpp  tasm.hpp
t16xe/src/kernel/: execute.cpp  t16xe.cpp  t16xe.hpp  utils.cpp
t16xe/src/validator/: TasmValidator.cpp  TasmValidator.hpp
tcc/: CMakeLists.txt  build.ps1  main.asm  main.c  main.tc  main.toru  tcc.cpp
tests/: bad_mov.tsm  bad_unknown.toru  bad_unknown.tsm  call_ret.tsm  hello.toru  hello.tsm  loop5.tsm  print_digit.tsm
